--- a/Website_files/stylesheet.css
+++ b/Website_files/stylesheet.css
@@ -7,7 +7,6 @@ body {
 }
 
 h1 {
-    color: blue;
     font-size: 300%;
 }
 
@@ -25,6 +24,10 @@ li {
     padding: 5%;
 }
 
-a:hover {
-    color: orange;
+a:visited {
+    color: black;
+}
+
+a {
+    color: black;
 }
