img downloaded locally

--- a/Website_files/subsites/stylesheet1.css
+++ b/Website_files/subsites/stylesheet1.css
@@ -17,5 +17,5 @@ a:visited {
 .Economie {
     background-repeat: no-repeat;
     background-size: cover;
-    background-image: url("https://america.cgtn.com/wp-content/uploads/2019/08/Global-Economy-for-DIGITAL.jpg");
+    background-image: url("../images/Global-Economy-for-DIGITAL.jpg");
 }
