--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,10 +4,12 @@ body {
     background-image: url("");
     background-size: cover;
     background-color: darkcyan;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 h1 {
     font-size: 300%;
+    font-weight: bolder;
 }
 
 .introtext {
