made whole nav-button clickable

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,7 +16,12 @@ h1 {
     font-size: larger;
 }
 
-li {
+a:visited {
+    color: black;
+}
+
+a {
+    color: black;
     font-size: 150%;
     text-align: center;
     list-style-position: inside;
@@ -29,14 +34,7 @@ li {
     border-radius: 5px;
     width: 50%;
     margin-left: 22.5%;
-}
-
-a:visited {
-    color: black;
-}
-
-a {
-    color: black;
+    display: block;
 }
 
 .economie {
