--- a/Website_files/subsites/stylesheet1.css
+++ b/Website_files/subsites/stylesheet1.css
@@ -4,15 +4,40 @@ body {
     font-family: Arial, Helvetica, sans-serif; 
 }
 
-a {
-    color: black;
+p {
+    font-size: 120%;
 }
 
-a:visited {
+a, a:visited{
     color: black;
+    display: block;
+}
+
+.IntroReligie {
+    display: grid;
+    align-items: center; 
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 5px;
 }
 
 .backbutton {
-    position: fixed;
-    text-align: right;
+    background-color: white;
+    border-radius: 5px;
+    width: 50%;
+    padding: 1%;
+    margin-left: 5%;
+}
+
+.Godsdiensten {
+    background-color: cadetblue;
+}
+
+.Chris {
+    background-color: lightblue;
+    padding: 5%;
+}
+
+.Harry {
+    background-color: greenyellow;
+    padding: 5%;
 }
