--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,12 +9,13 @@ body {
 }
 
 h1 {
-    font-size: 400%;
+    font-size: 5vw;
     font-weight: bolder;
 }
 
 .introtext {
-    font-size: 180%;
+    font-size: 2vw;
+    margin: 0px;
 }
 
 a:visited {
@@ -23,31 +24,29 @@ a:visited {
 
 a {
     color: black;
-    font-size: 150%;
     text-align: center;
     margin: 0.5%;
     padding: 0%;
-    padding-left: 25%;
-    padding-right: 25%;
-    border: 5%;
-    border-radius: 5px;
-    width: 50%;
+    width: 50vw;
     display: block;
 }
 
+.navlist {
+    font-size: 0px;
+    padding-left: 0px;
+    margin-left: 0px;
+}
+
 li {
-    font-size: 150%;
+    font-size: 2vw;
     list-style-position: inside;
     list-style-type: none;
-    margin: 0.5%;
-    padding: 0%;
-    padding-left: 1%;
-    padding-right: 1%;
+    padding-left: 0px;
+    margin-left: 0px;
     border: 5%;
     border-radius: 5px;
-    width: 50%;
-    margin-left: 22.5%;
-    display: block;
+    width: 50vw;
+    margin-left: 22.5vw;
 }
 
 .economie {
