--- a/Website_files/subsites/stylesheet1.css
+++ b/Website_files/subsites/stylesheet1.css
@@ -5,13 +5,28 @@ body {
 }
 
 p {
-    font-size: 3vw;
+    font-size: 2vh;
+}
+
+.ChapterTitle {
+    font-size: 6vh;
+}
+
+.Suntitles {
+    font-size: 4vh;
+}
+
+.MainText {
+    font-size: 2vh;
+    margin: 15%;
+    margin-top: 0%;
+    margin-bottom: 0%;
 }
 
 a, a:visited{
     color: black;
     display: block;
-    font-size: 2vw;
+    font-size: 2vh;
 }
 
 .IntroReligie {
@@ -24,7 +39,7 @@ a, a:visited{
 .backbutton {
     background-color: white;
     border-radius: 5px;
-    width: 15vw;
+    width: 15vh;
     padding: 1%;
     position: fixed;
 }
@@ -34,7 +49,7 @@ a, a:visited{
 }
 
 img {
-    width: 80vw;
+    width: 80vh;
 }
 
 .Chris {
